--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,30 @@
 # 添加数据连接的配置
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot
-spring.datasource.username=root
-spring.datasource.password=2012061128
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf8
+spring.datasource.druid.username=root
+spring.datasource.druid.password=2012061128
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.druid.filters=stat
+spring.datasource.druid.max-active=20
+spring.datasource.druid.initialSize=1
+spring.datasource.druid.max-wait=60000
+spring.datasource.druid.min-idle=1
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+spring.datasource.druid.validation-query=select 'x'
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.test-on-borrow=false
+
+# 配置mybatis
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=cn.bupt.zcc.domain
+
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
+pagehelper.returnPageInfo=check
 
 # 日志输出级别及格式的调整
 spring.output.ansi.enabled=DETECT
@@ -28,3 +50,5 @@ spring.redis.jedis.pool.max-idle=8
 spring.redis.jedis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=0
+
+
